@@ -193,7 +193,7 @@ GNULIB_CORE = no-c++ stdint stdbool havelib gettext localcharset stdlib \
 	host-cpu-c-abi socklen sockets fd-hook setenv unsetenv errno ioctl \
 	arpa_inet netinet_in inet_ntop inet_pton socketlib strerror_r-posix \
 	nocrash libsigsegv gnu-make gettimeofday getpagesize sys_time sys_wait \
-	vma-iter c-strtod
+	vma-iter c-strtod noreturn
 GNULIB_SYSCALLS = mktime strftime strptime strverscmp uname fnmatch-gnu
 GNULIB_IMPORTS = $(GNULIB_CORE) $(GNULIB_SYSCALLS) regex recvfrom sendto
 GNULIB_COMMON = $(GNULIB_CORE) $(GNULIB_MODULES)
