@@ -27,7 +27,7 @@
 
 
 # Specification in the form of a command-line invocation:
-#   gnulib-tool --import --lib=libgnu --source-base=src/gllib --m4-base=src/glm4 --doc-base=doc --tests-base=tests --aux-dir=src/build-aux --avoid=xalloc-die --no-conditional-dependencies --no-libtool --macro-prefix=gl --no-vc-files accept alloca-opt arpa_inet bind c-strtod close connect environ errno fd-hook fnmatch-gnu getloadavg getpagesize getpeername getsockname getsockopt gettext gettimeofday gnu-make havelib host-cpu-c-abi inet_ntop inet_pton ioctl libsigsegv link-follow listen localcharset lstat mkdtemp mkfifo mknod mkstemp mktime netinet_in no-c++ nocrash readlink recv recvfrom regex select send sendto setenv setsockopt shutdown socket socketlib sockets socklen stat stdbool stdint stdlib streq strerror_r-posix strftime strptime strverscmp sys_select sys_time sys_uio sys_wait uname uniname/uniname unistd unitypes uniwidth/width unsetenv vma-iter
+#   gnulib-tool --import --lib=libgnu --source-base=src/gllib --m4-base=src/glm4 --doc-base=doc --tests-base=tests --aux-dir=src/build-aux --avoid=xalloc-die --no-conditional-dependencies --no-libtool --macro-prefix=gl --no-vc-files accept alloca-opt arpa_inet bind c-strtod close connect environ errno fd-hook fnmatch-gnu getloadavg getpagesize getpeername getsockname getsockopt gettext gettimeofday gnu-make havelib host-cpu-c-abi inet_ntop inet_pton ioctl libsigsegv link-follow listen localcharset lstat mkdtemp mkfifo mknod mkstemp mktime netinet_in no-c++ nocrash noreturn readlink recv recvfrom regex select send sendto setenv setsockopt shutdown socket socketlib sockets socklen stat stdbool stdint stdlib streq strerror_r-posix strftime strptime strverscmp sys_select sys_time sys_uio sys_wait uname uniname/uniname unistd unitypes uniwidth/width unsetenv vma-iter
 
 # Specification in the form of a few gnulib-tool.m4 macro invocations:
 gl_LOCAL_DIR([])
@@ -69,6 +69,7 @@ gl_MODULES([
   netinet_in
   no-c++
   nocrash
+  noreturn
   readlink
   recv
   recvfrom
